--- a/writtenwork/esports/the-young-gun.html
+++ b/writtenwork/esports/the-young-gun.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../style.css" rel="stylesheet">
+    <link href="https://www.nickthien.com/writtenwork/style.css" rel="stylesheet">
 
     <title>The Young Gun</title>
   </head>
@@ -15,71 +15,14 @@
       <a href="https://www.nickthien.com/writtenwork" class="websiteHeader"><h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1></a>
     </div>
 
-    <div class="container info py-3" style="background-color: #F5F5F5;">
-      <h2>The Young Gun</h2>
-      <h5 class="text-muted">Getting to know the CS:GO team's youngest player.</h5>
-      <h6><strong>Published:</strong> <span style="font-weight: 300;">2017-9-20</span></h6>
-    </div>
+    <div class="container info py-3" id="info"></div>
 
-    <div class="container">
-      <img class="rounded mx-auto my-3 d-block" src='../img/placeholder/placeholder_esports_fdg.jpg' style="width: 100%">
-    </div>
+    <div class="container" id="coverImg"></div>
 
-    <div class="container my-3">
-      <p>
-        <em>Muhammad Ridzuan Hazi Bin Hasnul Hazi</em>, better known to some of us as "<a href="https://www.facebook.com/3nable/"><em>3nable</em></a>", is only 18 years old and the youngest player in the <a href="https://www.facebook.com/FDGCSGO/"><em>Fire Dragoon Counter-Strike: Global Offensive</em></a> team but he's already played on some of Malaysia esports' biggest stages, competing shoulder-to-shoulder with and against some of the greats of the CS:GO scene.
-      </p>
-      <p>
-        Even though the team is currently busy training for their upcoming tournaments, we thought it would be nice to get a fresh perspective and also know what his parents think about their son competing in esports.
-      </p>
-      <p>
-        <strong>As one of the youngest member of the CS:GO team, did you feel intimidated coming into the team? Does the team treat you well?</strong>
-        <br>
-        <strong>3nable:</strong> <em>No, I didn't feel intimidated at all when I joined the team because I know them from way back. The team treats me well. They all treat me like a part of the family.</em>
-      </p>
-      <p>
-        <strong>Is there anyone in esports that you look up to? Who is your role model?</strong>
-        <br>
-        <strong>3:</strong> <em>It was <a href="https://www.facebook.com/OfficialGetright/">GeT_RiGhT</a>. He was my idol for a long time.</em>
-      </p>
-      <p>
-        <strong>One of the biggest sacrifice you had when joining esports was that you had to give up studying? Would you consider going back studying at this point? What would you like to study?</strong>
-        <br>
-        <strong>3:</strong> <em>I had to give up studying because if I played and studied at the same time there will be no time for me to study and training and it will mess up my schedule. For now I will not continue my study because I would like to see how far Fire Dragoon can make it to the top. I would like to study Science &amp; Biotechnology.</em>
-      </p>
-      <p>
-        <strong>What was your parents' reaction to you wanting to be in esports?</strong>
-        <br>
-        <strong>3:</strong> <em>It was just a simple approval because they knew what I was capable of doing in esports.</em>
-      </p>
-      <p>
-        <strong>We noticed your parents were at the event (ROG Masters Malaysia Qualifiers) on all three days, usually I'll see at least one of your family members at your LAN games. How much does your family support your games?</strong>
-        <br>
-        <strong>3:</strong> <em>They will support me with their heart out even if we were losing.</em>
-      </p>
-      <p>
-        <strong>Do they understand what you're doing? Are they familiar with CS:GO?</strong>
-        <br>
-        <strong>3:</strong> <em>At first they didn't know much about the games but since I got serious into CS:GO my family would try to understand it. They knew that there are a lot of professional gamers in the world. And esports had already became a recognized profession and not just for fun.</em>
-      </p>
-      <p>
-        <strong>(To 3nable's parents) How well do you feel your son has done so far?</strong>
-        <br>
-        <strong>Parents:</strong> <em>We are very proud of him. Even in his young age, he managed to do so well and compete with much older and experienced players. We hope that one day he and his team will became one of the giants in esports.</em>
-      </p>
-      <p>
-        <strong>Did you expect that he would become this successful?</strong>
-        <br>
-        <strong>P:</strong> <em>We knew that one day he would have success in esports, but we just didn't expect it would be this soon.</em>
-      </p>
-      <p>
-        <strong>To close, 3nable, what do you hope for the future?</strong>
-        <br>
-        <strong>3:</strong> <em>I want Fire Dragoon to be able make it to the top in Asia.</em>
-      </p>
-      <p>
-        <strong>Thank you for your time and we wish you all the best in your future games!</strong>
-      </p>
+    <div class="container my-3" id="articleBody"></div>
+
+    <script type="text/javascript" src="the-young-gun.js"></script>
+    <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/writer.js"></script>
 
     </div>
 
