--- a/writtenwork/esports/team-interview-overwatch.html
+++ b/writtenwork/esports/team-interview-overwatch.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../style.css" rel="stylesheet">
+    <link href="https://www.nickthien.com/writtenwork/style.css" rel="stylesheet">
 
     <title>Team Interview | Pre-ESL Playoffs | Overwatch</title>
   </head>
@@ -15,88 +15,14 @@
       <a href="https://www.nickthien.com/writtenwork" class="websiteHeader"><h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1></a>
     </div>
 
-    <div class="container info py-3" style="background-color: #F5F5F5;">
-      <h2>Team Interview | Pre-ESL Playoffs | Overwatch</h2>
-      <h5 class="text-muted">Part time team, full time heroes. Getting to know the FDG Overwatch team.</h5>
-      <h6><strong>Published:</strong> <span style="font-weight: 300;">2017-08-23</span></h6>
-    </div>
+    <div class="container info py-3" id="info"></div>
 
-    <div class="container">
-      <img class="rounded mx-auto my-3 d-block" src='../img/placeholder/placeholder_esports_fdg.jpg' style="width: 100%">
-    </div>
+    <div class="container" id="coverImg"></div>
 
-    <div class="container my-3">
-      <p>Over the past few months since the inception of the <em>Fire Dragoon</em> <em>Overwatch</em> team, their name has been a fixture of the local Malaysian <em>Overwatch</em> scene. From the monthly online tournaments organized by <em>Midnight Gaming</em> to one-off (for the time being) tournaments such as <em>C2AGE X-treme 2017</em>, <em>APU #Play4Charity</em> and last weekend's <em>Neueaka Overwatch Merdeka Cup 2017</em>, the FDG team has been a force to be reckoned with.</p>
+    <div class="container my-3" id="articleBody"></div>
 
-      <p>Consistently landing themselves in the top spot of the local <em>Overwatch</em> competitive scene is one thing, but the team has also been proving themselves in the international scene. Over the past 7 weeks, the team has been playing against some of the top teams from all over South East Asia in the ESL Overwatch Open Division Season 1 - Regular Season.</p>
-
-      <p>Facing teams from Singapore, Vietnam, Thailand, and even India. The team managed to show that they aren't just good in the local context but able to stand up to the pressure from other countries as well. Outside of two matches that the team was unable to play at, the team has held their opponents to scores less than 2. With one game conceding only two points.</p>
-
-      <p>This weekend, the team will be taking part in the ESL Overwatch Open Division Season 1 - Playoffs Season. Their performance in the regular season has landed them in the fourth place and is the only Malaysian team that participated in the season to make it into the playoffs.</p>
-
-      <p>To get an idea of the magnitude of this situation, we have to consider the state of the Overwatch competitive league at the moment. Because of the relative newness of Overwatch, there are only a few internationally recognized tournaments that are organized for the game. You have the <em>Blizzard World Cup</em>, but after that, it's mostly just local tournaments that are not affiliated or recognized by Blizzard.</p>
-
-      <p>ESL's tournaments are the tournaments in between, sort of like football's EPL or the current SEA games. They aren't so big that they cover the world stage, but are big enough to be recognized by Blizzard. Therefore, this is considered a testing ground for our players. Whether or not they get to stand next to some of the giants of Asia and so far they have made it look easy.</p>
-
-      <p>With a fast-growing and young esports community that's not more than a year old, there's still a lot of room for growth here in Malaysia and our team is doing their part to help that growth. So it would be good to get to know who some of the movers and shakers are.</p>
-
-      <br>
-
-      <p><strong>Hi guys, I would like you guys to give introduce yourself? What is your role and a short description of what it is you do in the team?</strong></p>
-
-      <p><strong>Vertexity:</strong> <em>Hi, I'm Leong Kit Fai a.k.a 'Vertexity'. I play the flex support role and I 'm the captain of the team.</em></p>
-
-      <p><strong>Lat:</strong> <em>Hi, my name is Muhammad Aideed and I'm 23 years old, I grew up in KL and still live in my parents' house. I act as main support for my team and the main shotcaller.</em></p>
-
-      <p><strong>SOR:</strong> <em>My name is Muhammad Syafiq bin Sulaini also known as SOR or ROS, I've been playing competitively since 2008 in games such as Call of Duty 4: Modern Warfare PROMOD and Counter-Strike: Global Offensive under a few gaming teams such as Tbun.FFF and Orange Esports. My role on the team is to flex in between DPS/Tank when we need them, besides that I helped with shotcalling.</em></p>
-
-      <p><strong>CKay:</strong> <em>I'm from Selangor and I've been an avid gamer since young. I first discovered Overwatch on stream during its closed beta and instantly fell in love with it.</em></p>
-
-      <p><strong>fLameShot:</strong> <em>My name is Tuan Attif and most people refer to me as 'Api' which is my old IGN back in Counter-Strike 1.6 days. My current IGN is 'fLameShot' and I play the role of DPS in the team. I am usually flanking around the maps but that will change depending on which map we 're in and also what strategies we are running.</em></p>
-
-      <div class="my-3" align="center"><iframe class="embed-responsive" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/XE5g9Y7ziLY" width="560"></iframe></div>
-
-      <p><strong>Since most of you are part-time esports professionals, what is it that you do during your off-time and as a career?</strong></p>
-
-      <p><strong>V:</strong> <em>I watch TV series, anime, read mangas, and play more games. My day job is a Database Administrator at HP Cyberjaya.</em></p>
-
-      <p><strong>F:</strong> <em>Besides playing Overwatch, I run my own business. I also do Grabcar during my free time between my business and training for Overwatch.</em></p>
-
-      <p><strong>L:</strong> <em>I just recently graduated and because I kinda wanted to chill a bit after my studies and stuff so I'm focusing on playing video games really hard and see if I want to go full-time into esports. Besides playing games, I'm actually a 3D animator. I do a lot of 3D works before joining competitive Overwatch. My day job currently just trying to help out my family as much as I can. They are kinda old (over 60) and I'm trying not to be a burden to the family.</em></p>
-
-      <p><strong>How did you guys get recruited into Fire Dragoon?</strong></p>
-
-      <p><strong>V:</strong> <em>FDG was looking to hire a team so I applied along with two other friends who had the same thing in mind. Our team ended up being a fusion of 3 players (including me) and 3 players from a team formerly known as Team Random.</em></p>
-
-      <p><strong>F: </strong><em>I was recruited by my own ex-teammates from Team Random which was SOR and Darkaz. They needed a last man and they tried me out together with the other three to see whether my play-style can fit with the team and as you can see, it worked out.</em></p>
-
-      <p><strong>L:</strong> <em>I got recruited to FDG because one of the members invited me to join. Did some tryouts, training stuff and I passed the test.</em></p>
-
-      <p><strong>Since you guys are not together most of the time, how do you guys train?</strong></p>
-
-      <p><strong>S:</strong> <em>The way we train is entirely depends on the opponent, whatever strategies/hero composition that the opponent had we always try to adapt and counter it.</em></p>
-
-      <p><strong>F:</strong> <em>We don't really have a specific way of training. We will pick one aspect to improve on during the training or finding something new to try to see how effective it will be. Additionally, we do watch videos from international tournaments to see what can be improved from our side be it in terms of strategies or basic things like positioning.</em></p>
-
-      <p><strong>L:</strong> <em>For training, the team having to scrim as much as possible to improve ourselves. As for me, I spend all day playing Overwatch by myself to improve. Sometimes I play more than 10 hours per day.</em></p>
-
-      <p><strong>If given a choice would you guys go full-time?</strong></p>
-
-      <p><strong>F:</strong> <em>My answer will probably be 50/50. Gaming is something that I really enjoy but I have my own responsibilities that I have to keep up with. Going full time will require a lot of my focus and that will cause an imbalance in my other responsibilities.</em></p>
-
-      <p><strong>V:</strong> <em>The one thing I would change if I had the opportunity to, is to give more focus to gaming without having to worry about my day job because I still have goals I wish to achieve in the gaming industry.</em></p>
-
-      <p><strong>L:</strong> <em>If I had the choice to go full-time on this, I would definitely take that offer because becoming a top esports player is one of my achievement in life.</em></p>
-
-      <p><strong>What would you improve about the Overwatch competition scene here in Malaysia? What is the one thing you would change if you had the opportunity to?</strong></p>
-
-      <p><strong>S:</strong> <em>First we need more tournaments it doesn't have to be a big event, other than that is to help new teams to get them started up on the right foot by giving them basic knowledge about the game.</em></p>
-
-      <p><strong>F: </strong><em>I had this conversation with my teammates before so this one is easy. I believe that the thing that is lacking in Malaysia scene is exposure. A lot of people would love to go 'Pro' but it seems like there is no platform for them to try it. The online tournaments are usually filled with top tier teams and the LAN tournaments are filled with local top teams. There hasn't been proper amateur tournaments for Overwatch in Malaysia and if I have the opportunity, I would love to give back to the community by giving everyone else a fair chance in a proper amateur tournaments.</em></p>
-
-      <p><strong>Thank you to the team for their time away from their day job and from scrims. They will be playing at ESL Overwatch Open Division Season 1 - Playoffs Season this weekend and the games will be streamed here.</strong></p>
-
-    </div>
+    <script type="text/javascript" src="team-interview-overwatch.js"></script>
+    <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/writer.js"></script>
 
     </body>
   </html>
