--- a/writtenwork/esports/weekly-wrapup-1872017.html
+++ b/writtenwork/esports/weekly-wrapup-1872017.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../style.css" rel="stylesheet">
+    <link href="https://www.nickthien.com/writtenwork/style.css" rel="stylesheet">
 
     <title>Weekly Wrap-Up - 18/7/2017</title>
   </head>
@@ -15,46 +15,14 @@
       <a href="https://www.nickthien.com/writtenwork" class="websiteHeader"><h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1></a>
     </div>
 
-    <div class="container info py-3" style="background-color: #F5F5F5;">
-      <h2>Weekly Wrap-Up - 18/7/2017</h2>
-      <h5 class="text-muted">Keeping you up to date with what happened in FDG over the past week.</h5>
-      <h6><strong>Published:</strong> <span style="font-weight: 300;">2017-7-18</span></h6>
-    </div>
+    <div class="container info py-3" id="info"></div>
 
-    <div class="container">
-      <img class="rounded mx-auto my-3 d-block" src='../img/placeholder/placeholder_esports_fdg.jpg' style="width: 100%">
-    </div>
+    <div class="container" id="coverImg"></div>
 
-    <div class="container my-3">
-      <h3><u><strong>Counter-Strike: Global Offensive</strong></u></h3>
-      <p>The team took part in the online <em>World Cyber Arena 2017 APAC OPEN QUALIFICATION</em> on Friday evening. In the first round of 128, the team had a bye and advanced to the next round where they would face fellow Malaysian team, <em>Virtual Genesis Esports</em>, in the round of 64. The team managed to beat VG, 16-10.<br>
-        Later that evening in the round of 32, the team went against Vietnamese team, <em>UTM </em><em>CS:GO</em>, one of the biggest professional esports team in Vietnam. UTM blew past the CSGO team and was eliminated from the qualifier with the final score of 8-16. The team finished in the Top 32 and is unable to qualify for the main WCA 2017 APAC event.</p>
+    <div class="container my-3" id="articleBody"></div>
 
-      <br>
-
-      <h3><u><strong>FIFA17</strong></u></h3>
-      <p>Over the weekend, the <em>FIFA17</em> duo had two events. The first event was <em>Gamesbro</em>'s<em> FIFA17 Tournament</em> that was held at <em>Gamesbro</em> on Saturday. <em>Amirul "AmTuah" Afandi</em> was sadly knocked out early in the top 32 by <em>Falcon Esports</em> representative, <em>KaizerHaz</em>, who was knocked out by another fellow <em>Falcon Esports</em> player in the next round.
-        <br>
-        <em>Boon Shin "Shige"</em> would see more action at <em>Gamesbro</em>, after the group stages. His first game was against <em>Prodigy FIFA Gaming</em>'s <em>Ace</em>. <em>Shige</em> beats <em>Ace</em>, 5-3. In the round of 16, <em>Shige</em> would help his fellow teammate take back a win from <em>Falcon Esports</em> by beating their representative, <em>Dakwos</em>, 3-1.
-        <br>
-        Continuing his winning streak, <em>Shige</em> would next face <em>Kickers</em>' <em>Abul</em>. Going 1-1 in normal time, they would head into the penalty shootout with <em>Shige</em> coming out on top and moving on to the semifinals. Shige had hoped to go 4 for 4 against the esports companies that are competing in <em>Gamesbro</em> by beating <em>Infinite Esports</em>' <em>Nakata</em>. Sadly, <em>Shige</em> was unable to overcome the champion of the tournament. Losing to <em>Nakata</em>, 3-1.
-        <br>
-        After that lost, <em>Shige</em> was sent to the loser's final to compete for third place against <em>Prodigy</em>'s <em>Sora</em>. <em>Shige</em> managed to defeat <em>Sora,</em> ultimately achieving the second runner-up position.
-        <br>
-        Their next tournament at <em>Seven Legends Gaming Studio</em> on Sunday, <em>Shige </em>was sadly knocked out early on while <em>AmTuah</em> went on to be the champion of the event.</p>
-
-      <br>
-
-      <h3><u><strong>Overwatch</strong></u></h3>
-      <p>The team had an eventful two-days at <em>C2AGE X-treme 2017</em> at <em>HELP University, Subang 2 Campus</em>. On Saturday, the team only had one game against <em>5F1M</em> and won their first match in the tournament and advanced to the winner bracket finals on Sunday.
-        <br>
-        In the winner bracket finals, the team went against <em>SoloQ Gaming</em>, who the team defeated last month during <em>Midnight Gaming</em>'s <em>Jom Main! Overwatch Tournament</em>. So there is definitely a desire from the opposing team to overcome the team. The team managed to hold their ground and sent <em>SoloQ</em> to the loser's finals.
-        <br>
-        This would not be the last time that the teams meet. As <em>SoloQ</em> proved their tenacity by beating <em>Malaysian Battlefield Team - Mixed Team</em> in the loser's finals and faced off against the team one more time in the grand finals. However, <em>SoloQ </em>was unable to find a winning solution for the <em>FDG </em>team and the team beat <em>SoloQ</em>, 3-0, and ended the day as the champions of the tournament.
-        <br>
-        However, due to the team participating in this LAN tournament, they had to forfeit their match with <em>Xavier Esports</em> in the <em>ESL Open Division</em> due to scheduling, this drops the team down to 10th place.</p>
-
-    </div>
+    <script type="text/javascript" src="weekly-wrapup-1872017.js"></script>
+    <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/writer.js"></script>
 
     </body>
   </html>
