--- a/writtenwork/esports/bunking-in-with-team-rough-life.html
+++ b/writtenwork/esports/bunking-in-with-team-rough-life.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../style.css" rel="stylesheet">
+    <link href="https://www.nickthien.com/writtenwork/style.css" rel="stylesheet">
 
     <title>Bunking in With Team Rough Life</title>
   </head>
@@ -15,61 +15,14 @@
         <a href="https://www.nickthien.com/writtenwork" class="websiteHeader"><h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1></a>
       </div>
 
-      <div class="container info py-3">
-        <h2>Bunking in With Team Rough Life</h2>
-        <h5 class="text-muted">Extending a helping hand to the Malaysian representatives of ieSF LoL World Championship 2017.</h5>
-        <h6><strong>Published:</strong> <span style="font-weight: 300;">November 2nd, 2017</span></h6>
-      </div>
+      <div class="container info py-3" id="info"></div>
 
-      <div class="container">
-        <img class="rounded mx-auto my-3 d-block" src='../img/placeholder/placeholder_esports_fdg.jpg' style="width: 100%">
-      </div>
+      <div class="container" id="coverImg"></div>
 
-      <div class="container my-3">
-        <p>
-          As winners of the recent ieSF World Championship Malaysia Qualifier back in August, Team Rough House will be leaving to Busan next week to represent Malaysia in League of Legends and we opened our doors to; help coach the amateur team before they face&nbsp;against teams hailing from different parts of world. Australia, New Zealand, China, India, and Korea to name&nbsp;a few of the countries that will be participating in the tournament.
-        </p>
-        <p>
-          <strong>Could you guys give us a short introduction to yourselves?</strong>
-          <br>
-          <strong>Team Rough Life:</strong> <em>We're Team Rough Life, we're a Malaysian League of Legends team that qualified for the ieSF in August. We found each other online, had passion for LoL and just formed a team.</em>
-        </p>
-        <p>
-          <strong>Congratulations on qualifying for the ieSF, it must be pretty exciting for you guys?</strong>
-          <br>
-          <strong>TRL:</strong> <em>Thank you, we're really excited to go. We didn't really expect to qualify but it happened and we're just enjoying the ride. We were surprised to get a call from Fire Dragoon that they opened their doors for us to train.</em>
-        </p>
-        <p>
-          <strong>Did you expect all this when you guys first got the call?</strong>
-          <br>
-          <strong>TRL:</strong> <em>I think we just expected that it was going just using the equipment in the office to play and that's it. We didn't expect to have a gaming house provided and best of all a coach! We were really surprised when we came in and we were told that we would be coached by the one and only Crowe!</em>
-          <br>
-          <em>We've also been really taken care of. We were told that if we had any problems we could just contact them, but everything's been taken care of so well that we haven't found much problem. We could just focus on playing and not worry about anything else.</em>
-        </p>
-        <p>
-          <strong>That's really good to hear, I'll talk to you guys again before you guys leave to see how you guys are doing Thank you.</strong>
-          <br>
-          <strong>TRL: </strong><em>Thank you!</em>
-        </p>
+      <div class="container my-3" id="articleBody"></div>
 
-        <br>
-
-        <p>
-          As they start their one week intense training at the FDG offices, we wanted to get to know the team better. Team Rough Life is comprised of:
-        </p>
-        <ul>
-          <li>TOP : <a href="https://www.facebook.com/Jus.TZX">Justin 'RL jarlax' Tung</a></li>
-          <li>JUNGLE : <a href="https://www.facebook.com/Loo.kahyew1">Loo 'RL Lavender' Kah Yew</a></li>
-          <li>MID : <a href="https://www.facebook.com/yap.liyaw">Yap 'RL Arxues' Li Aw</a></li>
-          <li>ADC : <a href="https://www.facebook.com/myhero.myboss">Khoo 'RL Albin' El Bin</a></li>
-          <li>SP : <a href="https://www.facebook.com/LewisLife24">Louis 'RL Imanotgod' Wong</a></li>
-        </ul>
-        <br>
-        <p>
-          <em>The interview was conducted in Mandarin and was translated and edited for clarity.</em>
-        </p>
-
-      </div>
+      <script type="text/javascript" src="bunking-in-with-team-rough-life.js"></script>
+      <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/writer.js"></script>      
 
   </body>
 </html>
