--- a/writtenwork/esports/jlkc-interview.html
+++ b/writtenwork/esports/jlkc-interview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../style.css" rel="stylesheet">
+    <link href="https://www.nickthien.com/writtenwork/style.css" rel="stylesheet">
 
     <title>TLC (MY) Summer Season’s Outstanding Rookie JLKC Interview</title>
   </head>
@@ -15,47 +15,14 @@
       <a href="https://www.nickthien.com/writtenwork" class="websiteHeader"><h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1></a>
     </div>
 
-    <div class="container info py-3" style="background-color: #F5F5F5;">
-      <h2>TLC (MY) Summer Season’s Outstanding Rookie JLKC Interview</h2>
-      <h5 class="text-muted">Getting to know our 'Outstanding Rookie''s thoughts after his awards.</h5>
-      <h6><strong>Published:</strong> <span style="font-weight: 300;">2017-08-16</span></h6>
-    </div>
+    <div class="container info py-3" id="info"></div>
 
-    <div class="container">
-      <img class="rounded mx-auto my-3 d-block" src='../img/placeholder/placeholder_esports_fdg.jpg' style="width: 100%">
-    </div>
+    <div class="container" id="coverImg"></div>
 
-    <div class="container my-3">
-      <p>
-        Over the weekend, our <em>Fire Dragoon</em> (FDG) <em>League of Legends</em>' (LOL) player, <em>Jacob "JLKC" Low</em>, was awarded the '<em>Oustanding Rookie</em>' award by <em>Garena</em>. Although the FDG team was unable to qualify for <em>The Legends Circuit (MY)</em> Summer season playoffs, JLKC definitely made an impression on the voters during the group stages to be still in the running for the award. So we sat him down and got his reactions for receiving the award.
-      </p>
+    <div class="container my-3" id="articleBody"></div>
 
-      <p>
-        <strong>How does it feel to get nominated for Outstanding Rookie Award? Did you expect it?</strong>
-        <br>
-        <strong>JLKC:</strong> <em>Honestly, I didn't even know there was an Outstanding Rookie Award for TLC players, I believe this is the first time? It feels great to be able to jump from a casual normal game player to winning an award for TLC. I wasn't too shocked when I heard I won the award as I believe I did perform the best compared to the other rookies, I was more shocked by the fact there was even this award. Overall, I feel happy to be able to come up with an award winning performance despite being really nervous as it was my first competitive experience.</em>
-      </p>
-      <p><strong>What was going through your mind when you knew that you got the award?</strong>
-        <br>
-        <strong>J:</strong> <em>When I first heard about it, the person I told was my mum who was really proud of me. I felt accomplished to be able to come from a player that plays League for the fun of it to first winning an award for the biggest local League tournament in Malaysia.</em>
-      </p>
-      <p>
-        <strong>Your TLC summer season ended at the group stages, have you been keeping up with the rest of the season? Any standout matches?</strong>
-        <br>
-        <strong>J:</strong> <em>I didn't really watch the playoff games as I don't really watch full games so I only went through parts of it and looked at the end game score for all the games. I was interested in watching how Kuala Lumpur Hunters (KLH) would perform after their 3- week boot camp in Korea, but they did not perform as well as expected. I was more impressed by Eternity Esports (eE)'s performance as they played really well and unexpectedly during the finals, bringing KLH to a game 5 and shocking the audience. What is most surprising was the fact that Orange-Esports (ORS) ended the season in fourth place when everyone expected them to be at least top 2 or equal.</em>
-      </p>
-      <p>
-        <strong>Any plans now that the season is over?</strong>
-        <br>
-        <strong>J:</strong> <em>At the moment, I'm still considering if I still want to pursue a career in esports full-time. I'm thinking about going back to study, so we'll see how things go when the time comes.</em>
-      </p>
-      <p>
-        <strong>Thank you for your time.</strong>
-      </p>
-      <br>
-      <p>
-        While we here at FDG are unable to provide details on the exact voting process that got him the award. To end this article we can share with you guys the numbers that JLKC put out during the group stages:
-      </p>
+    <script type="text/javascript" src="jlkc-interview.js"></script>
+    <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/writer.js"></script>
 
       <table class="table table-striped table-hover">
         <thead>
