--- a/writtenwork/esports/fdg-gathering.html
+++ b/writtenwork/esports/fdg-gathering.html
@@ -20,7 +20,7 @@
 
       <div class="container my-3" id="articleBody"></div>
 
-      <script type="text/javascript" src="bunking-in-with-team-rough-life.js"></script>
+      <script type="text/javascript" src="fdg-gathering.js"></script>
       <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/writer.js"></script>
 
   </body>
