--- a/writtenwork/esports/a-camoud-manager-is-revealed.html
+++ b/writtenwork/esports/a-camoud-manager-is-revealed.html
@@ -14,11 +14,29 @@
         <a href="https://www.nickthien.com/writtenwork" class="websiteHeader"><h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1></a>
       </div>
 
-      <div class="container info py-3" id="info"></div>
+      <div class="container info py-3">
+        <div class="row justify-content-md-center">
+          <div class="col col-lg-8">
+            <div id="info"></div>
+          </div>
+        </div>
+      </div>
 
-      <div class="container" id="coverImg"></div>
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <div class="col col-lg-8">
+            <div id="coverImg"></div>
+          </div>
+        </div>
+      </div>
 
-      <div class="container my-3" id="articleBody"></div>
+      <div class="container my-3">
+        <div class="row justify-content-md-center">
+          <div class="col col-lg-8">
+            <div id="articleBody"></div>
+          </div>
+        </div>
+      </div>
 
       <script type="text/javascript" src="a-camoud-manager-is-revealed.js"></script>
       <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/writer.js"></script>
