--- a/writtenwork/esports/a-camoud-manager-is-revealed.html
+++ b/writtenwork/esports/a-camoud-manager-is-revealed.html
@@ -14,9 +14,9 @@
         <a href="https://www.nickthien.com/writtenwork" class="websiteHeader"><h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1></a>
       </div>
 
-      <div class="container info py-3">
+      <div class="container py-3">
         <div class="row justify-content-md-center">
-          <div class="col col-lg-8">
+          <div class="col col-lg-8 info">
             <div id="info"></div>
           </div>
         </div>
