Gaming Page Revamp

--- a/games/index.html
+++ b/games/index.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Video Games</a>
+        <a class="navbar-brand" href="#">Manual Not Included</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,86 +51,66 @@
     </nav>
 
     <div class="container">
-      <h2>Currently Playing</h2>
-      <div class="d-flex justify-content-between">
-          <div class="card" style="width: 18rem;">
-            <img src="./img/cover/ps5/deeprockgalactic_1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text"><strong>Deep Rock Galactic</strong></p>
-              <p class="card-text">January 4, 2022</p>
-            </div>
-          </div>
+      <h2>RECENT UPDATES</h2>
 
-          <div class="card" style="width: 18rem;">
-            <img src="./img/cover/ps4/raymanlegends.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text"><strong>Rayman Legends</strong></p>
-              <p class="card-text">January 4, 2022</p>
-            </div>
-          </div>
-
-          <div class="card" style="width: 18rem;">
-            <img src="./img/cover/ps5/godfall_1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text"><strong>Godfall</strong></p>
-              <p class="card-text">January 4, 2022</p>
-            </div>
-          </div>
-
-        <div class="card" style="width: 18rem;">
-          <img src="./img/cover/462308-deep-rock-galactic-windows-front-cover.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text"><strong>Deep Rock Galactic</strong></p>
-            <p class="card-text">January 4, 2022</p>
-          </div>
-        </div>
-      </div>
-
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">TITLE</th>
+            <th scope="col">PLATFORM</th>
+            <th scope="col">SECTION</th>
+            <th scope="col">LAST UPDATE</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Babylon's Fall</th>
+            <td>PlayStation 5</td>
+            <td>Introduction</td>
+            <td>February 27th, 2022</td>
+          </tr>
+          <tr>
+            <th scope="row">God of War III Remastered</th>
+            <td>PlayStation 4</td>
+            <td>Introduction</td>
+            <td>February 26th, 2022</td>
+          </tr>
+          <tr>
+            <th scope="row">Final Fantasy XII: The Zodiac Age</th>
+            <td>PlayStation 4</td>
+            <td>Introduction</td>
+            <td>February 25th, 2022</td>
+          </tr>
+          <tr>
+            <th scope="row">Alice: Madness Returns</th>
+            <td>PlayStation 3</td>
+            <td>Introduction</td>
+            <td>February 23rd, 2022</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <div class="container my-5">
-      <h2>Latest Videos</h2>
-      <div class="d-flex justify-content-between">
-          <div class="card" style="width: 18rem;">
-            <img src="./img/cover/ps4/marvelsspiderman_4.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text"><strong>Let's Play Marvel's Spider-Man - City That Never Sleeps: Turf Wars</strong></p>
-              <p class="card-text">Episode 2</p>
-              <p class="card-text">January 4, 2022</p>
-            </div>
+      <h2>LET'S PLAY</h2>
+      <div class="d-flex justify-content-start">
+          <div>
+            <img src="img/coverart/playstation/109854_front.jpg" class="img-thumbnail" width="100px">
           </div>
-
-          <div class="card" style="width: 18rem;">
-            <img src="./img/cover/ps4/marvelsspiderman_4.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text"><strong>Let's Play Marvel's Spider-Man - City That Never Sleeps: Turf Wars</strong></p>
-              <p class="card-text">Episode 1</p>
-              <p class="card-text">January 3, 2022</p>
-            </div>
+          <div>
+            <img src="img/coverart/playstation/581390_front.jpg" class="img-thumbnail" width="100px">
           </div>
-
-          <div class="card" style="width: 18rem;">
-            <img src="./img/cover/ps4/marvelsspiderman_3.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text"><strong>Let's Play Marvel's Spider-Man - City That Never Sleeps: The Heist</strong></p>
-              <p class="card-text">Episode 1</p>
-              <p class="card-text">January 2, 2022</p>
-            </div>
+          <div>
+            <img src="img/coverart/playstation/661263_front.jpg" class="img-thumbnail" width="100px">
           </div>
-
-          <div class="card" style="width: 18rem;">
-            <img src="./img/cover/462308-deep-rock-galactic-windows-front-cover.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text"><strong>Let's Play Marvel's Spider-Man - City That Never Sleeps: Turf Wars</strong></p>
-              <p class="card-text">Episode 1</p>
-              <p class="card-text">January 4, 2022</p>
-            </div>
+          <div>
+            <img src="img/coverart/playstation/635241_front.jpg" class="img-thumbnail" width="100px">
           </div>
 
         </div>
     </div>
 
-
+<!--
     <div class="container my-5">
       <h2>Reviews</h2>
       <div class="d-flex justify-content-between">
@@ -258,6 +238,7 @@
   </tbody>
 </table>
     </div>
+  -->
 
 
     <!-- Optional JavaScript; choose one of the two! -->
