update address commit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./portfolio">Portfolio</a>
+            <a class="nav-link" href="https://www.nickthien.com/portfolio">Portfolio</a>
           </li>
         </ul>
         <form>
@@ -38,24 +38,35 @@
     </div>
   </nav>
 
-  <div class="container my-5 p-5">
-    <img id="profilePicture" class="mb-5" src="./img/profilephoto.jpg">
-    <div class="m-3">
-      <h1 class="d-flex justify-content-center pb-3" style="font-size:2.5rem;">NICHOLAS THIEN</h1>
-      <h4 class="d-flex justify-content-center">Software Developer</h4>
+  <div class="container py-5">
+    <div class="column justify-content-center">
+      <img id="profilePicture" class="mb-5" src="./img/profilephoto.jpg">
+      <div class="m-3">
+        <h1 class="d-flex justify-content-center pb-3" style="font-size:2.5rem;">NICHOLAS THIEN</h1>
+        <h4 class="d-flex justify-content-center">Software Developer</h4>
+        <div class="text-center mt-5">
+          <a href="mailto:nick.thien@gmail.com">
+            <button type="button" class="btn btn-primary btn-lg">Contact</button>
+          </a>
+        </div>
+        
+      </div>
     </div>
   </div>
 
-  <div class="container my-5">
+  <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 col-sm-10 m-5 p-5" id="quote"></div>
     </div>
   </div>
+
+
+
 <div class="altBackground">
   <div class="container p-5">
     <h1 class="d-flex justify-content-center my-5">PORTFOLIO</h1>
 
-  <div class="row justify-content-evenly">
+<!--  <div class="row justify-content-evenly">
     <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
       <div class="d-flex justify-content-center"><img src="./img/logo/logo_awespyre.png" class="img-fluid p-3" style="height: 100px;" alt="Awespyre"></div>
       <h4>Business Owner | Awespyre</h4>
@@ -94,48 +105,7 @@
     </div>
   </div>
 </div>
-
-<!--  <div class="container">
-    <h2  class="d-flex justify-content-center my-5">WORK EXPERIENCE</h2>
-
-  <div class="row justify-content-evenly">
-    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="./img/logo/logo_awespyre.png" class="img-fluid p-3" style="height: 100px;" alt="Awespyre"></div>
-      <h4>Business Owner | Awespyre</h4>
-      <p>2018 - Present</p>
-      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
-    </div>
-    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="./img/logo/logo_fdg.png" class="img-fluid p-3" style="height: 100px;" alt="Fire dragoon"></div>
-      <h4>Content Executive | Fire Dragoon Esports</h4>
-      <p>2017</p>
-      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
-    </div>
-    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="./img/logo/logo_gg.png" class="img-fluid p-3" style="height: 100px;" alt="Generasi Gemilang"></div>
-      <h4>Volunteer | Generasi Gemilang</h4>
-      <p>2017</p>
-      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
-    </div>
-    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="./img/logo/logo_vs.png" class="img-fluid p-3" style="height: 100px;" alt="Veloce Solutions"></div>
-      <h4>Customer Service Executive | Veloce Solutions</h4>
-      <p>2017</p>
-      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
-    </div>
-    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="./img/logo/logo_lm.png" class="img-fluid p-3" style="height: 100px;" alt="Lil' Monsters"></div>
-      <h4>Junior Executive | Lil' Monsters</h4>
-      <p>2017</p>
-      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
-    </div>
-    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="./img/logo/logo_sas.png" class="img-fluid p-3" style="height: 100px;" alt="St. Andrew's School"></div>
-      <h4>Teacher | St. Andrew's School</h4>
-      <p>2017</p>
-      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
-    </div>
-  -->
+-->
 
   </div>
 </div>
@@ -144,5 +114,48 @@
 
 </body>
 
-<footer></footer>
+<footer class="text-center text-lg-start text-muted pt-5">
 
+    <div class="container text-center text-md-start">
+      <div class="row">
+
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-4">
+          <h6 class="text-uppercase fw-bold mb-4">
+            Links
+          </h6>
+          <p>
+            <a href="https://www.nickthien.com/portfolio" class="text-reset">Portfolio</a>
+          </p>
+        </div>
+      
+      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+        <h6 class="text-uppercase fw-bold mb-4">
+          Contact
+        </h6>
+        <p>
+          <i class="fas fa-home"></i> Subang Jaya, Selangor
+        </p>
+        <p>
+          <i class="fas fa-envelope"></i>
+          nick.thien@gmail.com
+        </p>
+        <p>
+          <i class="fas fa-phone"></i>+60122701789
+        </p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © <span id="year"></span> Copyright:
+    <a class="text-reset fw-bold" href="https://www.nickthien.com/">nickthien.com</a>
+  </div>
+
+  <script>
+    const d = new Date();
+    let year = d.getFullYear();
+    document.getElementById("year").innerHTML = year;
+    </script>
+
+</footer>
