--- a/writtenwork/esports/index.html
+++ b/writtenwork/esports/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://nickthien.com/writtenwork/style.css" rel="stylesheet">
+    <link href="https://www.nickthien.com/writtenwork/style.css" rel="stylesheet">
 
     <title>Written Work</title>
   </head>
@@ -24,9 +24,9 @@
     <script>
       let size = 20;
     </script>
-    <script type="text/javascript" src="https://nickthien.com/writtenwork/scripts/articles.js"></script>
-    <script type="text/javascript" src="https://nickthien.com/writtenwork/scripts/latest.js"></script>
-    <script type="text/javascript" src="https://nickthien.com/writtenwork/scripts/esports.js"></script>
+    <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/articles.js"></script>
+    <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/latest.js"></script>
+    <script type="text/javascript" src="https://www.nickthien.com/writtenwork/scripts/esports.js"></script>
 
   </body>
 </html>
